crates/oxc_css_parser/tests/error/at-rule/custom-selector/missing-colon.snap
---
source: crates/oxc_css_parser/tests/error.rs
---
error: expect token `:`, but found `<ident>`
  ┌─ missing-colon.css:1:18
  │
1 │ @custom-selector --foo .foo;
  │                  ^^^^^


